<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/vinyl_avatar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="101dp"
        android:src="@drawable/vinyl"
        android:contentDescription="@string/description_vinyl_avatar" />

    <TextView
        android:id="@+id/current_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="4dp"
        android:textSize="26sp"
        android:textColor="@color/colo5"
        android:fontFamily="@font/anta"
        android:text="@string/current_track"
        android:textAlignment="center" />

    <SeekBar
        android:id="@+id/track_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_track"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="377dp"
        android:layout_marginEnd="0dp" />

    <LinearLayout
        android:id="@+id/control_buttons"
        android:layout_width="405dp"
        android:layout_height="63dp"
        android:layout_below="@id/track_seek_bar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="7dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_previous"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:contentDescription="@string/description_button_previous"
            android:src="@drawable/preview" />

        <ImageButton
            android:id="@+id/button_play"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/description_button_play"
            android:src="@drawable/play" />

        <ImageButton
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:contentDescription="@string/description_button_next"
            android:src="@drawable/next" />

        <ImageButton
            android:id="@+id/button_shuffle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/description_button_shuffle"
            android:src="@drawable/shuffle" />

        <ImageButton
            android:id="@+id/button_repeat"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/description_button_repeat"
            android:src="@drawable/repeat1" />
    </LinearLayout>

    <ListView
        android:id="@+id/upcoming_tracks"
        android:layout_width="389dp"
        android:layout_height="158dp"
        android:layout_below="@id/control_buttons"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/rounded_listview_background"
        android:entries="@array/upcoming_tracks"
        android:textSize="36sp"
        android:textColor="@color/song_name_color"/>
    <Button
        android:id="@+id/button_select_directory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/control_buttons"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="button" />


</RelativeLayout>
